2006-01-17, Version 3.6.0
	* A config file has been added. This allows for loading only specific
	  plugins.
	* A `df' plugin has been added.
	* A `mysql' plugin has been added.

2005-12-18, Version 3.5.1
	* The PID-file is now deleted correctly when shutting down the daemon.
	* SIGINT and SIGTERM are now handled correctly.

2005-12-16, Version 3.5.0 (Revision 326)
	* A bug in the `load' module under Solaris has been fixed.
	* The `users' module has been contributed by Sebastian Harl. It counts
	  currently logged in users.
	* The CPU module now works under FreeBSD without the use of
	  `libstatgrab', however SMP support is missing.
	* The default directories for the RRD files and the PID file now
	  depend on the compile time setting of `localstatedir'.

2005-11-15, Version 3.4.0 (Revision 236)
	* A PID-file is written to /var/run upon startup. Thanks to `Tommie'
	  from gentoo's bugzilla for writing the patch.
	* The build dependency for librrd has been removed. Binaries built
	  without librrd are client-only and will multicast their value as
	  with the `-c' argument.
	* A patch by Peter Holik adds a module for monitoring CPU frequencies.
	* The newly introduced `-f' switch prevents daemon initialization
	  (forking, closing standard filehandles, etc.) Thanks to Alvaro
	  Barcellos for this patch.

2005-11-04, Version 3.3.0 (Revision 216)
	* New modules have been added:
	  - `serial', for monitoring traffic on the serial interfaces
	  - `nfs', for graphing NFS procedure calls
	  - `tape', traffic from/to tape devices
	* The the memory.rrd now accepts more than 4Gig of memory.

2005-10-26, Version 3.2.0 (Revision 200)
	* Support for graphing the processes has been added (thanks to Lyonel
	  Vincent)
	* If reading from hddtemp failes collectd will increase the time
	  between polls up to one day.
	* The init.d files have been improved.
	* Problems with the spec file have been fixed.

2005-10-16, Version 3.1.0 (Revision 194)